--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ISI 4TO "B"</title>
+  <title>RESULTADOS ISI 4TO "B"</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
